# dirtytalk

./: .pre-commit-config.yaml  Makefile  README.md  _dirtytalk.py  dirtytalk.py  programming.utf-8.spl  programming.words  pyproject.toml
.github/workflows/: build.yml
wordlists/: acronyms.words  algorithms.words  brands.words  cpp.words  docker.words  file-extensions.words  git.words  html.words  kubernetes.words  lorem-ipsum.words  nerd-fonts.words  prometheus.words  python.words  unix.words  versions.words
