[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "Vincent QB", email = "vincentqb@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
description = "Spellcheck dictionary for programmers; ships compiled .spl directly."
dynamic = ["version"]
name = "dirtytalk"
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
  "coverage[toml]",
  "pytest>=8.3.3",
  "pytest-cov"
]

[project.scripts]
dirtytalk = "_dirtytalk:dirtytalk_from_args"

[project.urls]
"Homepage" = "https://github.com/vincentqb/dirtytalk/"

[tool.coverage.report]
fail_under = 80
show_missing = false

[tool.coverage.run]
source = ["."]

[tool.hatch.build]
only-include = ["dirtytalk.py", "_dirtytalk.py"]

[tool.hatch.version]
source = "vcs"
